--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.2",
+        "doctrine/dbal": "2.9.*",
         "fideloper/proxy": "^4.0",
         "intervention/image": "dev-master",
         "jenssegers/date": "^3.4",
@@ -17,8 +18,8 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.7",
         "mews/purifier": "^2.1",
-        "yajra/laravel-datatables-oracle": "^8.13",
-        "doctrine/dbal": "2.9.*"
+        "spatie/laravel-permission": "^2.29",
+        "yajra/laravel-datatables-oracle": "^8.13"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
